--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googleapis/docs": "^1.0.1",
     "@slack/bolt": "^3.12.1",
+    "dotenv": "^16.0.1",
     "google-auth-library": "^8.1.1",
     "googleapis": "^105.0.0"
   }
